--- a/README.rdoc
+++ b/README.rdoc
@@ -2,6 +2,12 @@
 
 This project rocks and uses MIT-LICENSE.
 
+== Usage
+
+The core of accountable are Accounts and Transactions.  The concept of an account is probably familiar to most developers-- think of your checking or savings accounts.  A transaction links two accounts together, posting a debit to one, and a credit to another.  The credits and debits must be equal in amount.  That's it!
+
+The system also includes invoices, payments, and the ability to mark any eligible transaction as payment for an invoice, as long as the buyer's account is involved in the transaction.
+
 == Installation
 
 Gemfile
